@@ -1,3 +1,9 @@
+2008-09-29      Ralf Corsépius <ralf.corsepius@rtems.org>
+
+        * start/regs.S: Remove (Renamed into start/regs.h).
+        * start/regs.h: New (Renamed from start/regs.S).
+        * Makefile.am, start/start.S: Reflect renamer.
+
 2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* timer/timer.c: Convert to "bool".
